AUTOMAKE_OPTIONS = foreign

SUBDIRS = ai-utils

ACLOCAL_AMFLAGS = @ACLOCAL_CWFLAGS@
AM_CPPFLAGS = -iquote $(top_builddir) -iquote $(srcdir)

MAINTAINERCLEANFILES = \
	$(srcdir)/aclocal.m4 \
	$(srcdir)/configure \
	$(srcdir)/Makefile.in \
	$(srcdir)/install-sh \
	$(srcdir)/config.h.in \
	$(srcdir)/compile \
	$(srcdir)/depcomp \
	$(srcdir)/missing \
	$(srcdir)/config.guess \
	$(srcdir)/config.sub \ \
	$(srcdir)/mkinstalldirs \
	$(srcdir)/ltmain.sh \
	$(srcdir)/stamp-h.in \
	$(srcdir)/ChangeLog
